--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<br><br><br><br><a href="mailto:caririferragens@gmail.com">caririferragens@gmail.com<br><br>telefone: (88)35110921
+<br><br><br><br><center><a href="mailto:caririferragens@gmail.com">caririferragens@gmail.com</a><br><br>telefone: (88) 35110921</center>
