--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <br><br><br><br><center><a href="mailto:caririferragens@gmail.com">caririferragens@gmail.com</a><br><br>telefone: (88) 35110921</center>
+<br><br>Endereço: Rua São Pedro 1236, Centro Juazeiro do Norte - Ceará
