--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <br><br><br><br><center><a href="mailto:caririferragens@gmail.com">caririferragens@gmail.com</a><br><br>Telefone / WhatsApp: <a href="https://api.whatsapp.com/send?phone=558835110921&text=Oi">(88) 35110921</a>
-<br><br>Endereço: Rua São Pedro 1236, Salesianos (Centro) Juazeiro do Norte - Ceará</center><br>
+<br><br>Endereço: Rua São Pedro 1236, Salesianos (Centro) Juazeiro do Norte - Ceará</center><br><img src="logotipo-do-instagram.png">
