--- a/logomarcas/index.html
+++ b/logomarcas/index.html
@@ -1,2 +1,9 @@
+<!doctype html>
 <html>
-  <teste>
+  <head>
+    <title>Logomarcas</title>
+  </head>
+  <body>
+    <p><a href="bosch_logo.zip">bosch</a></p>
+  </body>
+</html>
