--- a/logomarcas/index.html
+++ b/logomarcas/index.html
@@ -7,6 +7,6 @@
     <p><a href="Krona_logo.zip">krona</a></p>
     <p><a href="bosch-logo.zip">bosch1</a>  <a href="bosch-vector.zip">bosch2</a></p>
     <p><a href="avant_logo.zip">avant</a></p>
-    <p><a href="ciser-realce.zip">avant</a></p>
+    <p><a href="ciser-realce.zip">ciser</a></p>
   </body>
 </html>
