--- a/barcode.html
+++ b/barcode.html
@@ -23,7 +23,7 @@
     videoEl.srcObject = stream;
     await videoEl.play();
 
-    const barcodeDetector = new BarcodeDetector({ formats: ['qr_code'] });
+    const barcodeDetector = new BarcodeDetector({ formats: ["code_39", "codabar", "ean_13"] });
     window.setInterval(async () => {
         const barcodes = await barcodeDetector.detect(videoEl);
         if (barcodes.length <= 0) return;
