--- a/barcode.html
+++ b/barcode.html
@@ -2,10 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - bar-code-detection-2</title>
+  <title>CodePen - bar-code</title>
 </head>
 
-<body translate="no">
+<body>
+  ver1.1
+  <br>
   <video id="stream" style="width: 100vw; height: 100vh;"/>
   
 <script>
