--- a/barcode.html
+++ b/barcode.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8">
   <title>CodePen - bar-code</title>
 </head>
-
+<style>
+#stream{
+  position:absolute;
+  top:0;
+  width:500px;
+  height:500px;
+  background:rgba(255,0,0,0.8) ;
+  
+  -webkit-clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
+  clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
+  
+}
+</style>
 <body>
-  ver1.1
+  <h2>ver1.2</h2>
   <br>
   <video id="stream" style="width: 100vw; height: 100vh;"/>
   
