--- a/barcode.html
+++ b/barcode.html
@@ -21,7 +21,7 @@
   <h4>ver1.3</h4>
   <br>
   <video id="stream" style="width: 100vw; height: 100vh;"/>
-  <div id="cs"></div>
+  <div class="cs"></div>
 <script>
 (async () => {
     const stream = await navigator.mediaDevices.getUserMedia({
