--- a/barcode3.html
+++ b/barcode3.html
@@ -11,7 +11,7 @@
     <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button>
 
     <!-- modal final de encerramento de pedido ... -->
-    <div class="modal" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" data-bs-backdrop="static" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
