--- a/barcode3.html
+++ b/barcode3.html
@@ -8,10 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <h1>versao 1.0</h1>
+    <br>
     <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button>
 
     <!-- modal final de encerramento de pedido ... -->
-    <div class="modal" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" data-bs-backdrop="static" tabindex="-1" aria-hidden="true">
+    <div class="modal" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
