--- a/barcode3.html
+++ b/barcode3.html
@@ -8,16 +8,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>versao 1.1</h1>
+   <h1>versao 1.2</h1>
     <br>
     <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button>
 
     <!-- modal final de encerramento de pedido ... -->
-    <div class="modal" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" tabindex="-1" aria-hidden="true">
+    <div class="modal" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title fs-6" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -33,7 +33,7 @@
 $(document).ready(function(){
   $('#abre_camera').click(function(event){
     $('#modal1 .modal-title').text('...');
-	$('#modal1 .modal-body').html('<video id="stream" style="width: 100vw; height: 100vh;"/>')
+	$('#modal1 .modal-body').html('<video id="stream" style="width: 100%; height: 100%;"/>')
 	$('#modal1').modal('show');
 
     (async () => {
@@ -46,7 +46,7 @@ $(document).ready(function(){
             audio: false
         });
 
-        const videoEl = document.querySelector("#stream");
+        const videoEl = $('#stream');
         videoEl.srcObject = stream;
         await videoEl.play();
 
@@ -59,7 +59,6 @@ $(document).ready(function(){
     })();
   });
 });
-
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
