--- a/barcode3.html
+++ b/barcode3.html
@@ -33,7 +33,7 @@
 $(document).ready(function(){
   $('#abre_camera').click(function(event){
     $('#modal1 .modal-title').text('...');
-	$('#modal1 .modal-body').html('<video id="stream" style="width: 100%; height: 100%;"/>')
+	$('#modal1 .modal-body').html('<video id="stream" style="width: 300px; height: 200px;"/>')
 	$('#modal1').modal('show');
 
     (async () => {
@@ -50,7 +50,7 @@ $(document).ready(function(){
         videoEl.srcObject = stream;
         await videoEl.play();
 
-        const barcodeDetector = new BarcodeDetector({ formats: ['qr_code'] });
+        const barcodeDetector = new BarcodeDetector({ formats: ["code_39", "codabar", "ean_13"] });
         window.setInterval(async () => {
             const barcodes = await barcodeDetector.detect(videoEl);
             if (barcodes.length <= 0) return;
