--- a/barcode3.html
+++ b/barcode3.html
@@ -36,27 +36,27 @@ $(document).ready(function(){
 	$('#modal1 .modal-body').html('<video id="stream" style="width: 300px; height: 200px;"/>')
 	$('#modal1').modal('show');
 
-    (async () => {
-        const stream = await navigator.mediaDevices.getUserMedia({
-            video: {
-                facingMode: {
-                    ideal: "environment"
-                }
-            },
-            audio: false
-        });
-
-        const videoEl = $('#stream');
-        videoEl.srcObject = stream;
-        await videoEl.play();
-
-        const barcodeDetector = new BarcodeDetector({ formats: ["code_39", "codabar", "ean_13"] });
-        window.setInterval(async () => {
-            const barcodes = await barcodeDetector.detect(videoEl);
-            if (barcodes.length <= 0) return;
-            alert(barcodes.map(barcode => barcode.rawValue));
-        }, 1000);
-    })();
+	    (async () => {
+	        const stream = await navigator.mediaDevices.getUserMedia({
+	            video: {
+	                facingMode: {
+	                    ideal: "environment"
+	                }
+	            },
+	            audio: false
+	        });
+	
+	        const videoEl = document.querySelector("#stream");
+	        videoEl.srcObject = stream;
+	        await videoEl.play();
+	
+	        const barcodeDetector = new BarcodeDetector({ formats: ["code_39", "codabar", "ean_13"] });
+	        window.setInterval(async () => {
+	            const barcodes = await barcodeDetector.detect(videoEl);
+	            if (barcodes.length <= 0) return;
+	            alert(barcodes.map(barcode => barcode.rawValue));
+	        }, 1000);
+	    })();
   });
 });
 </script>
