--- a/barcode3.html
+++ b/barcode3.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-   <h1>versao 1.21</h1>
+   <h1>versao 1.22</h1>
     <br>
     <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button>
 
@@ -33,7 +33,7 @@
 $(document).ready(function(){
   $('#abre_camera').click(function(event){
     $('#modal1 .modal-title').text('...');
-	$('#modal1 .modal-body').html('<video id="stream" style="width: 300px; height: 200px;"/>')
+	$('#modal1 .modal-body').html('<video id="stream" style="width: 80vh; height: 100vh;"/>')
 	$('#modal1').modal('show');
 
 	    (async () => {
