--- a/barcode3.html
+++ b/barcode3.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-   <h1>versao 1.233</h1>
+   <h1>versao 1.234</h1>
     <br>
     <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button>
 
@@ -57,8 +57,8 @@ $(document).ready(function(){
 	    })();
   });
 });
-$('body').on('hidden.bs.modal','#modal1',function(){
-//$('#modal1').on('hidden.bs.modal',function(){
+//$('body').on('hidden.bs.modal','#modal1',function(){
+$('#modal1').on('hide.bs.modal',function(){
     const stream = $('#stream').srcObject;
     const tracks = stream.getTracks();
     tracks.forEach((track)=>{
