--- a/barcode3.html
+++ b/barcode3.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-   <h1>versao 1.235</h1>
+   <h1>versao 1.236</h1>
     <br>
     <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button><br><button type="button" class="btn btn-primary" id="fecha_camera">Desativar</button>
 
@@ -68,12 +68,16 @@ $('#modal1').on('hidden.bs.modal',function(){
     alert('fechou janela');
 });
 $('#fecha_camera').click(function(event){
-    const stream = $('#stream').srcObject;
-    const tracks = stream.getTracks();
-    tracks.forEach((track)=>{
-        track.stop();
-    });
-    $('#stream').srcObject = null;
+
+    const stream = navigator.mediaDevices.getUserMedia({ video: true, audio: false })
+    stream.getTracks().forEach(track => track.stop());
+	
+    //const stream = $('#stream').srcObject;
+    //const tracks = stream.getTracks();
+    //tracks.forEach((track)=>{
+        //track.stop();
+    //});
+    //$('#stream').srcObject = null;
 });	
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
