--- a/barcode4.html
+++ b/barcode4.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-   <h1>versao 1.237</h1>
+   <h1>versao 1.238</h1>
     <br>
     <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button><br><button type="button" class="btn btn-primary" id="fecha_camera">Desativar</button>
 
@@ -58,7 +58,11 @@ $(document).ready(function(){
   });
 });
 $('#modal1').on('hidden.bs.modal',function(){
-    alert('fechou janela');
+   const video = document.querySelector("#stream");
+   const mediaStream = video.srcObject;
+   const tracks = mediaStream.getTracks(); 
+   tracks[0].stop();
+   alert('fechou janela');
 });
 $('#fecha_camera').click(function(event){
 const video = document.querySelector("#stream");
