--- a/barcode4.html
+++ b/barcode4.html
@@ -8,9 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-   <h1>versao 1.242</h1>
+   <h1>versao 1.243</h1>
     <br>
-    <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button><br><button type="button" class="btn btn-primary" id="fecha_camera">Desativar</button>
+    <div id="content"></div><button type="button" class="btn btn-primary" id="abre_camera">Escanear</button>
 
     <!-- modal final de encerramento de pedido ... -->
     <div class="modal" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -63,13 +63,6 @@ $('#modal1').on('hide.bs.modal',function(){
    const tracks = mediaStream.getTracks(); 
    tracks[0].stop();
 });
-$('#fecha_camera').click(function(event){
-const video = document.querySelector("#stream");
-const mediaStream = video.srcObject;
-const tracks = mediaStream.getTracks(); 
-tracks[0].stop();
-alert('desativou');
-});	
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
