--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
+<!DOCTYPE html>
+  <html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta name="language" content="pt-BR"/>
+    <meta name="country" content="BRA"/>
+    <meta name="description" content="Encontre as melhores ofertas de ferragens, ferramentas, material elétrico, material hidráulico e muito mais para sua casa e construção! Aproveite!" />
+    <meta name="Abstract" content="Cariri Ferragens - Ferragens, Ferramentas, Material Elétrico, Material Hidráulico e muito mais"/>
+    <meta name="author" content="Cariri Ferragens"/>
+    <meta name="copyright" content="Cariri Ferragens"/>
+    <meta http-equiv="pragma" content="no-cache"/>
+    <meta name="robots" content="all">
+    <title>Cariri Ferragens</title>
+  </head>
+  <body>
 <br><br><br><br><br><br><center><img src="caririferragens.jpg"><br><br>Telefone / WhatsApp: <a href="tel:08835110921">(88) 35110921</a>
 <br><br>Endereço: Rua São Pedro 1236, Salesianos (Centro) Juazeiro do Norte - Ceará<br><br><a href="https://api.whatsapp.com/send?phone=558835110921&text=Oi" target="_blank"><img width="30px" height="30px" src="whatsapp.png"></a><font color="white" width="0.5px">.</font><a href="https://www.instagram.com/caririferragens/" target="_blank"><img width="30px" height="30px" src="instagram.png"></a> <a href="https://www.tiktok.com/@caririferragens/" target="_blank"><img width="30px" height="30px" src="tiktok.png"></a> <a href="https://www.facebook.com/caririferragens/" target="_blank"><img width="30px" height="30px" src="facebook.png"></a><a href="https://goo.gl/maps/xXCnsTZQdATq2K7L6" target="_blank"><img width="30px" height="30px" src="placeholder.png"></a></center>
+
+  </body>
+</html>
