--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="copyright" content="Cariri Ferragens"/>
     <meta http-equiv="pragma" content="no-cache"/>
     <meta name="robots" content="all">
+    <meta name="keywords" content="Juazeiro do norte,Crato,Barbalha,Caririaçu,Missão Velha,Brejo Santo,Farias Brito,Jardim,Cariri,Sul,Ceará,Ferragens,Ferramentas,Hidráulico,Elétrico,Construção,Reforma,Obra" />
     <title>Cariri Ferragens</title>
   </head>
   <body>
